Fixed Vania's lame grammar

--- a/WebApplication1/Views/Main/Index.cshtml
+++ b/WebApplication1/Views/Main/Index.cshtml
@@ -4,5 +4,5 @@
 @{ ViewData["Title"] = "Home"; }
 <div>
     <h1>Welcome to FreshFish</h1>
-    <h2>And try survive</h2>
+    <h2>And try to survive</h2>
 </div>
