трохи неробочого коду

--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -39,10 +39,10 @@
                         <a asp-controller="Product" asp-action="Product"><span class="iconify color_icon" data-inline="false" data-icon="la:fish-solid" style="font-size: 20px;"></span></a>
                     </li>
                     <li class="menu-item-in">
-                        <a asp-controller="Databases" asp-action="Workers"><span class="iconify color_icon" data-inline="false" data-icon="emojione-monotone:construction-worker" style="font-size: 20px;"></span></a>
+                        <a asp-controller="Worker" asp-action="Worker"><span class="iconify color_icon" data-inline="false" data-icon="emojione-monotone:construction-worker" style="font-size: 20px;"></span></a>
                     </li>
                     <li class="menu-item-in">
-                        <a asp-controller="Databases" asp-action="Vehicles"><span class="iconify color_icon" data-inline="false" data-icon="teenyicons:garage-outline" style="font-size: 20px;"></span></a>
+                        <a asp-controller="Vehicles" asp-action="Vehicles"><span class="iconify color_icon" data-inline="false" data-icon="teenyicons:garage-outline" style="font-size: 20px;"></span></a>
                     </li>
                 </ul>
             </li>
@@ -117,15 +117,15 @@
                                     </a>
                                 </li>
                                 <li class="menu-item-in-dropdown">
-                                    <a asp-controller="Databases" asp-action="Workers" class="link-in-pop-up-menu">
+                                    <a asp-controller="Worker" asp-action="Worker" class="link-in-pop-up-menu">
                                         <div class="link-conteiner">
                                             <span class="iconify primary_color_icon" data-inline="false" data-icon="emojione-monotone:construction-worker" style="font-size: 20px;"></span>
-                                            <p class="text-in-list bottom-text-margin">Workers</p>
+                                            <p class="text-in-list bottom-text-margin">Worker</p>
                                         </div>
                                     </a>
                                 </li>
                                 <li class="menu-item-in-dropdown">
-                                    <a asp-controller="Databases" asp-action="Vehicles" class="link-in-pop-up-menu">
+                                    <a asp-controller="Vehicles" asp-action="Vehicles" class="link-in-pop-up-menu">
                                         <div class="link-conteiner">
                                             <span class="iconify primary_color_icon" data-inline="false" data-icon="teenyicons:garage-outline" style="font-size: 20px;"></span>
                                             <p class="text-in-list bottom-text-margin">Vehicles</p>
